# hcie_rs

./: .gitignore  Cargo.toml  README.md  main.ipynb  peppers_encrypted.tif  w.txt  w_inv.txt
imgs/: baboon.tiff  lena.tif  peppers.tiff
src/: encrypt.rs  get_permutation_matrix.rs  img_array.rs  logistic.rs  main.rs  mean.rs  rotate.rs  sub_hcie.rs
