[package]
name = "hcie_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
image = "0.24.7"
ndarray = "0.15.6"
num-traits = "0.2.17"
serde = { version = "1.0.189", features = ["derive"] }
